# ascii-img2

./: .gitattributes  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: charset.rs  colorizer.rs  error.rs  generator.rs  lib.rs  preprocess.rs
lib/src/generator/: image_lines_ext.rs
