[package]
name = "ascii-img2"
version = "0.1.0"
edition = "2018"
keywords = [
	"asciiart",
	"ascii-art",
	"ascii_art",
]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
image = { version = "0.25.9", default-features = false }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
